--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,27 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      Learn ionic
     </ion-title>
+  </ion-toolbar>
+  <ion-toolbar>
+    <ion-searchbar></ion-searchbar>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+<ion-button expand="full" color="warning" (click)="load()">Loading</ion-button>
+
+<ion-button expand="full" color="tertiary" (click)="toast()">Toast</ion-button>
+
+<ion-button expand="full" color="success" (click)="alert()">Alert</ion-button>
+
+<ion-button expand="full" color="success" routerLink="/team">Go to team</ion-button>
+
+
+
+
+
 </ion-content>
+
